// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Horizontal Tabs 1`] = `
<div
  className="tabs-horizontal tabs-align-start"
>
  <div
    className="nav-tabs nav"
    onKeyDown={[Function]}
    role="tablist"
  >
    <div
      className="nav-item"
    >
      <a
        aria-controls="horizontal-tabs-tabpane-tab1"
        aria-selected={true}
        className="nav-link active"
        data-rr-ui-event-key="tab1"
        disabled={false}
        id="horizontal-tabs-tab-tab1"
        onClick={[Function]}
        role="tab"
      >
        <div
          className="nav-link_content"
        >
          tab1 title
        </div>
      </a>
    </div>
    <div
      className="nav-item"
    >
      <a
        aria-controls="horizontal-tabs-tabpane-tab2"
        className="nav-link"
        data-rr-ui-event-key="tab2"
        disabled={false}
        id="horizontal-tabs-tab-tab2"
        onClick={[Function]}
        role="tab"
        tabIndex={-1}
      >
        <div
          className="nav-link_content"
        >
          tab2 title
        </div>
      </a>
    </div>
    <div
      className="nav-item"
    >
      <a
        aria-controls="horizontal-tabs-tabpane-tab3"
        className="nav-link"
        data-rr-ui-event-key="tab3"
        disabled={false}
        id="horizontal-tabs-tab-tab3"
        onClick={[Function]}
        role="tab"
        tabIndex={-1}
      >
        <div
          className="nav-link_content"
        >
          tab3 title
        </div>
      </a>
    </div>
  </div>
  <div
    className="tab-content"
  >
    <div
      aria-labelledby="horizontal-tabs-tab-tab1"
      className="tab-pane active"
      id="horizontal-tabs-tabpane-tab1"
      role="tabpanel"
      title="tab1 title"
    >
      tab1 content
    </div>
    <div
      aria-labelledby="horizontal-tabs-tab-tab2"
      className="tab-pane"
      id="horizontal-tabs-tabpane-tab2"
      role="tabpanel"
      title="tab2 title"
    >
      tab2 content
    </div>
    <div
      aria-labelledby="horizontal-tabs-tab-tab3"
      className="tab-pane"
      id="horizontal-tabs-tabpane-tab3"
      role="tabpanel"
      title="tab3 title"
    >
      tab3 content
    </div>
  </div>
</div>
`;

exports[`renders Vertical Tabs 1`] = `
<div
  className="tabs-horizontal tabs-align-start"
>
  <div
    className="nav-tabs nav"
    onKeyDown={[Function]}
    role="tablist"
  >
    <div
      className="nav-item"
    >
      <a
        aria-controls="vertical-tabs-tabpane-tab1"
        aria-selected={true}
        className="nav-link active"
        data-rr-ui-event-key="tab1"
        disabled={false}
        id="vertical-tabs-tab-tab1"
        onClick={[Function]}
        role="tab"
      >
        <div
          className="nav-link_content"
        >
          tab1 title
        </div>
      </a>
    </div>
    <div
      className="nav-item"
    >
      <a
        aria-controls="vertical-tabs-tabpane-tab2"
        className="nav-link"
        data-rr-ui-event-key="tab2"
        disabled={false}
        id="vertical-tabs-tab-tab2"
        onClick={[Function]}
        role="tab"
        tabIndex={-1}
      >
        <div
          className="nav-link_content"
        >
          tab2 title
        </div>
      </a>
    </div>
    <div
      className="nav-item"
    >
      <a
        aria-controls="vertical-tabs-tabpane-tab3"
        className="nav-link"
        data-rr-ui-event-key="tab3"
        disabled={false}
        id="vertical-tabs-tab-tab3"
        onClick={[Function]}
        role="tab"
        tabIndex={-1}
      >
        <div
          className="nav-link_content"
        >
          tab3 title
        </div>
      </a>
    </div>
  </div>
  <div
    className="tab-content"
  >
    <div
      aria-labelledby="vertical-tabs-tab-tab1"
      className="tab-pane active"
      id="vertical-tabs-tabpane-tab1"
      role="tabpanel"
      title="tab1 title"
    >
      tab1 content
    </div>
    <div
      aria-labelledby="vertical-tabs-tab-tab2"
      className="tab-pane"
      id="vertical-tabs-tabpane-tab2"
      role="tabpanel"
      title="tab2 title"
    >
      tab2 content
    </div>
    <div
      aria-labelledby="vertical-tabs-tab-tab3"
      className="tab-pane"
      id="vertical-tabs-tabpane-tab3"
      role="tabpanel"
      title="tab3 title"
    >
      tab3 content
    </div>
  </div>
</div>
`;
